# Local-Crow-Webserver

./: README.md
CSCN72050_Lab10/: CMakeLists.txt  main.cpp
CSCN72050_Lab10/public/: CheckOut.html  Product1.html  Product2.html  Product3.html  Product4.html  index.html  test.http
CSCN72050_Lab10/public/scripts/: addcart.js
CSCN72050_Lab10/public/styles/: style.css
